# SupportComment

./: README.md  build.gradle  settings.gradle
DexHot/: build.gradle
DexHot/src/androidTest/java/com/sun/dexdemo/: ExampleInstrumentedTest.java
DexHot/src/main/: AndroidManifest.xml
DexHot/src/main/java/com/sun/dexdemo/: BaseBug.java  DexFile.java  MainActivity.java
DexHot/src/main/res/values/: strings.xml
DexHot/src/test/java/com/sun/dexdemo/: ExampleUnitTest.java
SkinChange/: build.gradle
SkinChange/src/androidTest/java/com/sun/assetmananger/: ExampleInstrumentedTest.java
SkinChange/src/main/: AndroidManifest.xml
SkinChange/src/main/java/com/sun/assetmananger/: App.java  BaseSkinActivity.java  MainActivity.java  SkinCompatViewInflater.java
SkinChange/src/main/res/layout/: activity_main.xml
SkinChange/src/main/res/values/: colors.xml  strings.xml
SkinChange/src/test/java/com/sun/assetmananger/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/sun/supportcomment/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/sun/supportcomment/: IPersonAidlInterface.aidl
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml  layout_staggere_grid_item.xml
app/src/main/res/values/: strings.xml
bsdiffDemo/: build.gradle
bsdiffDemo/src/main/: AndroidManifest.xml
bsdiffDemo/src/main/cpp/: CMakeLists.txt  bsdiff.c  bspatch.c  native-lib.cpp
bsdiffDemo/src/main/cpp/bzip2-1.0.8/: bzip2.c  mk251.c  spewG.c
bsdiffDemo/src/main/res/layout/: activity_first.xml  activity_main.xml  item_recyclerview.xml
bsdiffDemo/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
lifecycleplugin/: build.gradle
plugingroovy/: build.gradle
pluginsupport/: build.gradle
pluginsupport/src/main/: AndroidManifest.xml
pluginsupport/src/main/res/layout/: activity_main.xml
pluginsupport/src/main/res/values/: strings.xml
(+65 files in other folders)
